<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_choose_languge"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_english" />

    <Button
        android:id="@+id/btnUrdu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_urdu"
        android:layout_marginTop="12dp" />
</LinearLayout>
