<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="20dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCheckDisease"
            android:layout_width="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="20dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_check_disease"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardHistory"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="20dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_history"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCommonDiseases"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="20dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_common_diseases"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardUserManual"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="20dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_user_manual"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSettings"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginBottom="32dp"
            android:layout_marginHorizontal="20dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_settings"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>